--- a/views/partials/navbar.html
+++ b/views/partials/navbar.html
@@ -1,5 +1,5 @@
 <div class="nav">
-    <span class="nav-title">DANK MEMER IMGEN</span>
+    <span class="nav-title">RickBot IMGEN</span>
     <div class="nav-links">
         <div class="nav-item">
             <a class="nav-link {{ active_home }}" href="/">HOME</a>
