using config for real

--- a/views/create.html
+++ b/views/create.html
@@ -10,13 +10,13 @@
           <label for="name">Application Name:</label>
           <input type="text" id="name" name="name" placeholder="Your stupid bot">
           <label for="token">Token:</label>
-          <input type="text" id="token" name="token" placeholder="blabla">
+          <input type="text" id="token" name="token" placeholder="ODDFOFXUpgf7yEntul5ockCA.OFk6Ph.lmsA54bT0Fux1IpsYvey5XuZk04">
           <label for="owner">Owner ID:</label>
-          <input type="text" id="owner" name="owner" placeholder="172571295077105664">
+          <input type="text" id="owner" name="owner" placeholder="186571646453284864">
           <label for="owner_name">Owner Name:</label>
-          <input type="text" id="owner_name" name="owner_name" placeholder="Melmsie#0002">
+          <input type="text" id="owner_name" name="owner_name" placeholder="R C N#0001">
           <label for="email">Owner E-Mail:</label>
-          <input type="text" id="email" name="email" placeholder="je-moeder@is-een-plopkoek.be">
+          <input type="text" id="email" name="email" placeholder="ori.appelbaum@gmail.com">
           <input style="cursor: pointer" type="submit" value="Create API Key">
         </div>
       </form>
